[package]
name = "uob-team-project-progress-tracker"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4"
handlebars = "4"
reqwest = { version = "0.11", features = ["socks", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
